@@ -49,7 +49,7 @@
 				</td><td>
 					<select name="tx_mnogosearch_pi1[l][]">
 						<!-- ###SITESEL_OPTION### begin -->
-						<option value="###VALUE###">###TEXT###</option>
+						<option value="###VALUE###"###SELECTED###>###TEXT###</option>
 						<!-- ###SITESEL_OPTION### end -->
 					</select>
 				</td></tr>
@@ -60,7 +60,7 @@
 					###TEXT_SEARCH_WHERE###
 				</td><td>
 					<!-- ###SITESEL_OPTION### begin -->
-					<input type="radio"  name="tx_mnogosearch_pi1[l][]" value="###VALUE###" />###TEXT###
+					<input type="radio"  name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
 					<!-- ###SITESEL_OPTION### end -->
 				</td></tr>
 				<!-- ###SITESEL_RADIO### end -->
@@ -70,7 +70,7 @@
 					###TEXT_SEARCH_WHERE###
 				</td><td>
 					<!-- ###SITESEL_OPTION### begin -->
-					<input type="checkbox" name="tx_mnogosearch_pi1[l][]" value="###VALUE###" />###TEXT###
+					<input type="checkbox" name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
 					<!-- ###SITESEL_OPTION### end -->
 				</td></tr>
 				<!-- ###SITESEL_CHECK### end -->
